# sparse_matrix

./: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile.orig  Doxyxyfile.in  LICENSE  README.md
.github/workflows/: release.yml  static.yml
cmake/git/: git_version_detect.cmake
cmake/props/: target_properties.cmake
docs/: annotated.html  annotated_dup.js  classes.html  classsparse_1_1details_1_1ShiftIndex-members.html  classsparse_1_1details_1_1ShiftIndex.html  classsparse_1_1details_1_1ShiftIndex.js  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4-members.html  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4.html  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4.js  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4__coll__graph.map  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4__coll__graph.md5  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4_a3b3bce1279ec865fc664df12efeb5096_cgraph.map  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4_a3b3bce1279ec865fc664df12efeb5096_cgraph.md5  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4_a3eea36edbd5ebedb99b1936b61ada8d7_cgraph.map  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4_a3eea36edbd5ebedb99b1936b61ada8d7_cgraph.md5  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4_ab9ae5406017bb8dd8b71a4b9efba3f70_cgraph.map  classsparse_1_1details_1_1ShiftIndex_3_01T_00_01N__DIMS_00_01N__DIMS_01_4_ab9ae5406017bb8dd8b71a4b9efba3f70_cgraph.md5  classsparse_1_1details_1_1ShiftIndex__coll__graph.map  classsparse_1_1details_1_1ShiftIndex__coll__graph.md5  classsparse_1_1std23_1_1details_1_1ProxyCell-members.html  classsparse_1_1std23_1_1details_1_1ProxyCell.html  classsparse_1_1std23_1_1details_1_1ProxyCell.js  classsparse_1_1std23_1_1details_1_1ProxyCell__coll__graph.map  classsparse_1_1std23_1_1details_1_1ProxyCell__coll__graph.md5  classsparse_1_1std23_1_1details_1_1ProxyCell_a0e8fa12545ba3f11e2712dc418327187_cgraph.md5  classsparse_1_1std23_1_1details_1_1ProxyCell_aa701820bb08f45760d1653c49c102780_cgraph.map  classsparse_1_1std23_1_1details_1_1ProxyCell_aa701820bb08f45760d1653c49c102780_cgraph.md5  classsparse_1_1std23_1_1details_1_1ProxyCell_ad04a1095e22a1e1a11349563af549de4_cgraph.map  dir_000000_000002.html  dir_000001_000000.html  dir_0d126990016457eb3db78b202c239837.html  dir_0d126990016457eb3db78b202c239837.js  dir_0d126990016457eb3db78b202c239837_dep.map  dir_0d126990016457eb3db78b202c239837_dep.md5  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_313caf1132e152dd9b58bea13a4052ca_dep.map  dir_313caf1132e152dd9b58bea13a4052ca_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  (+124 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  related_0.js  related_1.js  related_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
src/: main.cpp
src/sparse/: matrix.hpp  matrix23.hpp  matrix23_gtest.cpp  matrix_gtest.cpp
src/utils/: logging.hpp
